# NetworkServerTemplate

./: CMakeLists.txt  README  README.md  README_DEV.md  appservice.cpp  appservice.h  main.cpp
conf/: appconfig.cpp  appconfig.h
log/: logger.cpp  logger.h
mysql/: mysqlconnection.cpp  mysqlconnection.h  mysqlconnectionpool.cpp  mysqlconnectionpool.h
net/: tcpserver.cpp  tcpserver.h  tcpsocket.cpp  tcpsocket.h  udpserver.cpp  udpserver.h
parser/: messageparser.cpp  messageparser.h
script/: conf.ini  copy.sh  init.sh  shutdown.sh  startup.sh
sdk/crypto++/include/: asn.h  config.h  integer.h  pubkey.h  zinflate.h
sdk/hpsocket/include/HPSocket/: HPTypeDef.h
sdk/mysqlclient/include/mysql/: mysql_version.h
